
release.xml:
----------------------
* New targets "deploy-server" and "kill-server" for starting/killing the binary release on a testing port.
* Added "web" tests for the binary distribution. They are executed by the "webtest" target in release.xml.
* Exclude pre-built binaries from source distribution and rename zip to include "src" in the name (CC-336). 

build loop
======================

AntBuilder:
----------------------
* Fails with an explicit error message if the ant log is empty instead of a XML parse Error on line -1: Premature end of file. Patch by Jerome Lacoste.
* Warn that jvmargs are ignored when specifing anthome

main/build.xml:
----------------------
* Allow build for jdk 1.3 no matter which jdk is being used. Patch by Brad Clarke. 

ClearCase:
----------------------
* New 'all' attribute can be used to increase performance when checking the entire view. Patch by Rick Reimer.

configxml.html:
----------------------
* Included link to timebuild in modificationset documentation.

config.xml:
----------------------
* Allow preconfiguration of <log ..> element and sub-elements. Patch by Jerome Lacoste.
* Allow preconfiguration of project and subelements (CC-352). Patch by Jerome Lacoste.

ConcurrentVersionsSystem.java:
----------------------
* Fixed bug when module attribute is set to a true CVS module, not just a directory. Patch by Brad Clarke.

CVS.java:
----------------------
* Deprecated CVS.java in favor of ConcurrentVersionsSystem.java to overcome issues with directory/filename conflicts, specifically with Eclipse IDE (CC-164). Note: CVS.java and other deprecated methods/classes are scheduled for deletion in the 3.0 release.


general:
----------------------
* Minor changes to make code jdk 1.3 compliant.
* Added fast-md5.jar to manifest for cruisecontrol.jar
* Deprecated the command-line argument named "port" in favor of "jmxport" to be more explicit.
* Javadoc, code, and test deprecation cleanup. Patch by Brad Clarke.